--- a/package.xml
+++ b/package.xml
@@ -54,6 +54,7 @@
      <build_depend>std_msgs</build_depend>
      <build_depend>cv_bridge</build_depend>
      <build_depend>sensor_msgs</build_depend>
+     <build_depend>nav_msgs</build_depend>
      <build_depend>geometry_msgs</build_depend>
      <build_depend>message_runtime</build_depend>
      <build_depend>image_transport</build_depend>
@@ -64,6 +65,7 @@
      <build_export_depend>std_msgs</build_export_depend>
      <build_export_depend>cv_bridge</build_export_depend>
      <build_export_depend>sensor_msgs</build_export_depend>
+     <build_export_depend>nav_msgs</build_export_depend>
      <build_export_depend>geometry_msgs</build_export_depend>
      <build_export_depend>message_runtime</build_export_depend>
      <build_export_depend>image_transport</build_export_depend>
@@ -73,6 +75,7 @@
      <exec_depend>std_msgs</exec_depend>
      <exec_depend>cv_bridge</exec_depend>
      <exec_depend>sensor_msgs</exec_depend>
+     <exec_depend>nav_msgs</exec_depend>
      <exec_depend>geometry_msgs</exec_depend>
      <exec_depend>message_runtime</exec_depend>
      <exec_depend>image_transport</exec_depend>
